--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -5,16 +5,16 @@
 \chapter{\IfLanguageName{dutch}{Inleiding}{Introduction}}%
 \label{ch:inleiding}
 
-In de evenementenbranche wordt er steeds meer gebruik gemaakt van vernieuwde technologieën om het gemak van de bezoekers te vergroten en de veiligheid te garanderen. Denk aan contactloze betalingen aan de hand van NFC chips en QR-codes om toegangskaartjes te scannen. Het veilig opbergen van persoonlijke spullen kan vanaf nu ook gemoderniseerd worden. Het bedrijf Lockit Rentals heeft hiervoor in 2022 QR-code lockers ontworpen en geïntroduceerd. Met die unieke QR-code kunnen klanten hun persoonlijke spullen veilig opbergen en de locker onbeperkt openen voor een vaste opgelegde periode. De problemen ontstaan als de toegangscode die voorgesteld wordt als een QR-code niet meer uitgelezen kan worden of wanneer de klant zijn/haar QR-code verliest. 
+In de evenementenbranche wordt er steeds meer gebruik gemaakt van vernieuwde technologieën om het gebruiksgemak van de bezoekers te vergroten en de veiligheid te garanderen. Denk aan contactloze betalingen aan de hand van NFC chips en QR-codes om toegangskaartjes te scannen. Het veilig opbergen van persoonlijke spullen kan vanaf nu ook gemoderniseerd worden. Het bedrijf Lockit Rentals heeft hiervoor in 2022 QR-code lockers ontworpen en geïntroduceerd. Met die unieke QR-code kunnen klanten hun persoonlijke spullen veilig opbergen en de locker onbeperkt openen voor een vaste opgelegde periode. De problemen ontstaan als de toegangscode die voorgesteld wordt als een QR-code niet meer uitgelezen kan worden of wanneer de klant zijn/haar QR-code verliest. 
 
 \newpage
 
 \section{\IfLanguageName{dutch}{Probleemstelling}{Problem Statement}}%
 \label{sec:probleemstelling}
 
-Het niet digitaliseren van lockers op festivals en evenementen kan leiden tot verschillende pijnpunten. Dit kan het leiden tot inefficiëntie bij het verhuren van lockers, omdat het proces van verhuur en betaling handmatig moet worden afgehandeld. Daarnaast kan het zorgen voor langere wachtrijen en ongemak bij de festivalgangers. 
+Het niet digitaliseren van lockers op festivals en evenementen kan leiden tot verschillende pijnpunten. Dit kan leiden tot inefficiëntie bij het verhuren van lockers, omdat het proces van verhuur en betaling handmatig moet worden afgehandeld. Daarnaast kan het zorgen voor langere wachtrijen en ongemak bij de festivalgangers. 
 
-Een potentieel probleem is dat de festivalgangers zelf verantwoordelijk zijn voor de inhoud alsook voor de toegangscode voorgesteld als een QR-code van hun gekocht kluisje. Deze QR-code kan bewaard worden op allerlei manieren: als bijlage op gsm, kan bewaard worden op de applicatie van Lockit Rentals of indien mogelijk als effectieve QR-code voorgesteld op papier. Uiteraard is er geen zekerheid dat de festivalganger zijn code in zijn bezit heeft tot op het einde van een evenement. De huurder zijn telefoon kan uitgevallen zijn waardoor dat ze de QR-code niet meer in bezit hebben of de festivalganger raakt de afdrukte versie van de QR-code kwijt. Voor dit probleem zal gedurende de uitbating logistiek personeel aanwezig moeten zijn. Deze kunnen aan de hand van administratie rechten een duplicaat QR-code genereren om zo de locker te openen. Lockit Rentals wil dit analyseren en hiervoor een correcte oplossing vinden. 
+Een potentieel probleem is dat de festivalgangers zelf verantwoordelijk zijn voor de inhoud alsook voor de toegangscode voorgesteld als een QR-code van hun gekocht kluisje. Deze QR-code kan bewaard worden op allerlei manieren: als bijlage op gsm, kan bewaard worden op de applicatie van Lockit Rentals of indien mogelijk als effectieve QR-code voorgesteld op papier. Uiteraard is er geen zekerheid dat de festivalganger zijn code in zijn bezit heeft tot op het einde van een evenement. De huurder zijn telefoon kan uitgevallen zijn waardoor dat de persoon in kwestie de QR-code niet meer in bezit hebben of de festivalganger raakt de afdrukte versie van de QR-code kwijt. Voor dit probleem zal gedurende de uitbating logistiek personeel aanwezig moeten zijn. Deze kunnen aan de hand van administratierechten een duplicaat QR-code genereren om zo de locker te openen. Lockit Rentals wil dit analyseren en hiervoor een correcte oplossing vinden. 
 
 Een extra problematiek doet zich voor wanneer de QR-code scanners niet optimaal werken. Deze problemen kunnen ontstaan door onveranderbare factoren zoals hevige zon of felle regen. Ook hebben sommige mensen die niet op de hoogte zijn van het systeem extra hulp nodig bij het scannen. Door het willen afschaffen van de logistieke medewerkers verliezen ze hier de mogelijkheid om informatieve en technische hulp te bieden ten behoeve van de klanten. Na festivalzomer 2022 is gebleken uit de observaties van het bedrijf dat de technologieën niet genoeg uitgewerkt zijn om de units onbemand uit te baten.
 
